deploy/kustomize/production/13middleWare.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: bdg-blog-v2
spec:
  redirectScheme:
    scheme: https
    permanent: true
