deploy/kustomize/production/05service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: bdg-blog
  name: bdg-blog
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    app: bdg-blog
